force-app/main/default/objects/Sales_Representative__c/Sales_Representative__c.object-meta.xml
<CustomObject>
    <label>Sales Representative</label>
    <pluralLabel>Sales Representatives</pluralLabel>
    <description>Sales Representative</description>
    <nameField>
        <label>Sales Representative Name</label>
        <type>AutoNumber</type>
        <displayFormat>REP-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>