force-app/main/default/objects/Sales_Representative__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Daily Capacity</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>12</defaultValue>
    <description>Daily Capacity</description>
</CustomField>