force-app/main/default/objects/Sales_Representative__c/fields/Open_Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Lead_Count__c</fullName>
    <label>Open Lead Count</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Open Lead Count</description>
</CustomField>