force-app/main/default/objects/Sales_Representative__c/fields/Segment_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Segment_Specialty__c</fullName>
    <label>Segment Specialty</label>
    <type>Picklist</type>
    <description>Segment Specialty</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GOLD</fullName>
                <default>true</default>
                <label>GOLD</label>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>BRONZE</fullName>
            </value>
            <value>
                <fullName>INSTITUTIONAL</fullName>
            </value>
            <value>
                <fullName>MODERN_TRADE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>