force-app/main/default/objects/Sales_Representative__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Sales Representatives</relationshipLabel>
    <relationshipName>Sales_Representatives</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Territory</description>
</CustomField>