force-app/main/default/objects/Sales_Representative__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Rep Profiles</relationshipLabel>
    <relationshipName>Sales_Rep_Profiles</relationshipName>
    <required>true</required>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User</description>
</CustomField>