force-app/main/default/objects/Sales_Representative__c/fields/Working_Hours_End__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_End__c</fullName>
    <label>Working Hours End</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>18</defaultValue>
    <description>Working Hours End</description>
</CustomField>