force-app/main/default/objects/Sales_Representative__c/fields/Working_Hours_Start__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_Start__c</fullName>
    <label>Working Hours Start</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>9</defaultValue>
    <description>Working Hours Start</description>
</CustomField>